--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "vue-lazyload",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup --config build.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "webpack": "^2.2.1"
+  "devDependencies": {
+    "babel-preset-es2015-rollup": "^3.0.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-uglify": "^1.0.1"
   }
 }
