--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
-    "build": "rollup --config build.js"
+    "build": "NODE_ENV=production rollup --config build.js",
+    "dev": "rollup --config build.js"
   },
   "author": "",
   "license": "ISC",
